--- a/src/app/component/sign-up/sign-up.component.scss
+++ b/src/app/component/sign-up/sign-up.component.scss
@@ -1,5 +1,5 @@
 .Block {
-    background-color: gray;
+    background-color: darkgray;
     width: 100%;
     height: 100%;
 }
@@ -7,7 +7,7 @@
 .mat1 {
     background-color: white;
     height: 60%;
-    width: 24%;
+    width: 40%;
     right: -24%;
     top: 19%;
     border-radius: 25px;
@@ -52,9 +52,9 @@
 
 .login {
     margin-top: 15px;
-    margin-bottom: 420px;
+   bottom: -15px;
     position: relative;
-    left: 50px;
+    left: 35px;
     font-family: Roboto, sans-serif;
     font-size: 20px;
     font-weight: 500;
@@ -64,10 +64,10 @@
 
 .signup {
 
-    margin-top: 2px;
+    margin-top: 15px;
     margin-bottom: 490px;
     position: relative;
-    left: 190px;
+    left: 160px;
     font-family: Roboto, sans-serif;
     font-size: 20px;
     font-weight: 500;
