--- a/src/app/component/sign-up/sign-up.component.html
+++ b/src/app/component/sign-up/sign-up.component.html
@@ -9,64 +9,65 @@
         </div>
     </mat-card>
     <mat-card class="mat2">
-        
-        <div class="login" routerLink="/login">
-            <P>LOGIN</P>
+        <div fxLayout="row">
+            <div class="login" routerLink="/login">
+                <P>LOGIN</P>
+            </div>
+            <div class="signup">
+                <p>SIGNUP</p>
+            </div>
         </div>
-        <div class="signup">
-            <p>SIGNUP</p>
-        </div>
-        <form  [formGroup]="signupForm">
-        <div class="form-fields">
-            <div class="fullname">
-                <div>
-                    <mat-label>Full Name</mat-label>
+        <form [formGroup]="signupForm">
+            <div class="form-fields">
+                <div class="fullname">
+                    <div>
+                        <mat-label>Full Name</mat-label>
+                    </div>
+                    <div>
+                        <mat-form-field appearance="outline">
+                            <input type="text" formControlName="fullName" matInput placeholder="">
+                            <mat-error>Enter full name</mat-error>
+                        </mat-form-field>
+                    </div>
                 </div>
-                <div>
-                    <mat-form-field appearance="outline">
-                        <input type="text" formControlName="fullName" matInput placeholder="">
-                        <mat-error>Enter full name</mat-error>
-                    </mat-form-field>
+                <div class="email">
+                    <div>
+                        <mat-label>Email Id</mat-label>
+                    </div>
+                    <div>
+                        <mat-form-field appearance="outline">
+                            <input type="text" formControlName="email" matInput placeholder="">
+                            <mat-error>Enter an email address</mat-error>
+                        </mat-form-field>
+                    </div>
                 </div>
-            </div>
-            <div class="email">
-                <div>
-                    <mat-label>Email Id</mat-label>
-                </div>
-                <div>
-                    <mat-form-field appearance="outline">
-                        <input type="text" formControlName="email" matInput placeholder="">
-                        <mat-error>Enter an email address</mat-error>
-                    </mat-form-field>
-                </div>
-            </div>
 
-            <div class="password">
-                <div>
-                    <mat-label>Password</mat-label>
+                <div class="password">
+                    <div>
+                        <mat-label>Password</mat-label>
+                    </div>
+                    <div>
+                        <mat-form-field appearance="outline">
+                            <input type="password" formControlName="password" matInput placeholder="">
+                            <mat-error>Enter a password</mat-error>
+                        </mat-form-field>
+                    </div>
                 </div>
-                <div>
-                    <mat-form-field appearance="outline">
-                        <input type="password" formControlName="password" matInput placeholder="">
-                        <mat-error>Enter a password</mat-error>
-                    </mat-form-field>
-                </div>
-            </div>
 
-            <div class="number">
-                <div>
-                    <mat-label>Mobile Number</mat-label>
-                </div>
-                <div>
-                    <mat-form-field appearance="outline">
+                <div class="number">
+                    <div>
+                        <mat-label>Mobile Number</mat-label>
+                    </div>
+                    <div>
+                        <mat-form-field appearance="outline">
 
-                        <input type="text" formControlName="mobileNo" matInput placeholder="">
-                        <mat-error>Enter a mobile number</mat-error>
-                    </mat-form-field>
+                            <input type="text" formControlName="mobileNo" matInput placeholder="">
+                            <mat-error>Enter a mobile number</mat-error>
+                        </mat-form-field>
+                    </div>
                 </div>
+                <button mat-button class="signupbutton" (click)="onSubmit()">Signup</button>
             </div>
-            <button mat-button class="signupbutton" (click)="onSubmit()">Signup</button>
-        </div>
-    </form>
+        </form>
     </mat-card>
 </div>
