--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -5,19 +5,28 @@
             <img class="img-Icon" src="../../../assets/Booklogo.png" />
             <a id="text">BookStore</a>
         </div>
-        <mat-card class="search">
+        <!-- <mat-card class="search">
             <button mat-icon-button>
                 <mat-icon class="searchIcon">search</mat-icon>
             </button>
             <input class="searchInput" type="text" name="search" placeholder="Search.." />
-        </mat-card>
-
+        </mat-card> -->
+        <div class="search-container">
+            <div class="s-btn" type="button">
+                <img src="../../../assets/search-1300-439394.png">
+            </div>
+            <div class="srch">
+                <input class="search-field" type="text" aria-label="search" placeholder="Search" autocomplete="off"
+                    role="combobox" aria-hidden="false">
+            </div>
+        </div>
         <button class="Profile" mat-button>Profile <mat-icon>perm_identity </mat-icon></button>
         <button class="cart" mat-button>Cart<mat-icon>shopping_cart</mat-icon></button>
     </mat-toolbar>
-
-
+    <div>
+        <router-outlet></router-outlet>
+    </div>
+    <footer class="footer">
+        Copyright &copy; 2022 Bookstore Private Limited All Rights Reserved
+    </footer>
 </div>
-<footer class="footer">
-    Copyright &copy; 2022 Bookstore Private Limited All Rights Reserved
-</footer>
