added the cart page code

--- a/src/app/component/quick-view/quick-view.component.html
+++ b/src/app/component/quick-view/quick-view.component.html
@@ -1,4 +1,4 @@
-<div class="mainheader" fxLayout="row" fxLayoutAlign="center center">
+<div class="mainheader">
     <div style="width: 80%;margin-left: 95px;">
         <div style="width: 100%; margin-top: 2%;">
             <span style="color:gray; cursor: pointer;" routerLink="/dashboard/books">Home/</span><span> Books </span>
@@ -72,14 +72,11 @@
 
                     </div>
 
-                    <div fxLayoutAlign="end center">
+                    <div>
                         <button class="submitbutton" mat-flat-button color="primary">Submit</button>
                     </div>
 
-
                 </div>
-
-
             </div>
         </div>
     </div>
