added wishlist code

--- a/src/app/component/cart/cart.component.scss
+++ b/src/app/component/cart/cart.component.scss
@@ -41,6 +41,11 @@
 
 
 }
+.details-content{
+    margin-left: 120px;
+margin-top: -90px;
+}
+
 .bookName {
     height: 24px;
     width: 150px;
@@ -54,7 +59,7 @@
 
 
 .bodyBox {
-    height: 750px;
+    height: 280px;
 }
 
 
@@ -108,7 +113,7 @@
     border-radius: 3px;
     cursor: pointer;
     margin-top: -5%;
-    margin-left: 590px;
+    margin-left: 510px;
 
 }
 
