--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -26,7 +26,7 @@
     <div>
         <router-outlet></router-outlet>
     </div>
-    <!-- <footer class="footer">
+    <footer class="footer">
         Copyright &copy; 2022 Bookstore Private Limited All Rights Reserved
-    </footer> -->
+    </footer>
 </div>
