--- a/src/app/component/wishlist/wishlist.component.html
+++ b/src/app/component/wishlist/wishlist.component.html
@@ -1,11 +1,11 @@
 <div style="width: 100%; margin-top: 2%;">
-    <span class="home">Home/</span><span> MyWishlist </span>
+    <span class="home" routerLink="/dashboard/books">Home/</span><span> MyWishlist </span>
 </div>
 <div class="content-box">
-    <div class="wish-cal" fxLayoutAlign="start center">
+    <div class="wish-cal">
         <div class="wishText" style="margin-left: 25px; margin-top: 12px;">
 
-            <b class="wishlist">My Wishlist(02)</b>
+            <b class="wishlist">My Wishlist({{wishListArray.length}})</b>
 
         </div>
     </div>
@@ -13,7 +13,6 @@
 
         <div class="img-content" >
 
-            <div fxLayout="row">
                 <div class="book-image">
                     <img src="../../../assets/book1.png" width="65px" height="85px">
                 </div>
@@ -21,9 +20,9 @@
                 <div class="description">
                     <h4 class="bookName">{{list.product_id.bookName}}</h4>
                     <h5 class="author">by {{list.product_id.author}}</h5>
-                    <h4 fxLayoutGap="5px"><b>Rs. {{list.product_id.price}}</b> <del class="del">Rs. 5000</del></h4>
+                    <h4><b>Rs. {{list.product_id.price}}</b> <del class="del">Rs. 5000</del></h4>
                 </div>
-            </div>
+           
             <div class="delete">
                 <mat-icon class="deletebtn">delete_outline</mat-icon>
             </div>
