--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -46,7 +46,7 @@
                 <div class="forgotpass">
                     <mat-label>Forgot Password?</mat-label>
                 </div>
-                <button class="button1" (click)="onSubmit()">Login</button>
+                <button class="button1" routerLink="/dashboard/books" (click)="onSubmit()">Login</button>
 
                 <div class="or">
                     <h2>-------OR-------</h2>
