--- a/src/app/component/dashboard/dashboard.component.scss
+++ b/src/app/component/dashboard/dashboard.component.scss
@@ -87,6 +87,34 @@
     margin-left: 2%;
     cursor: pointer;
 }
+.menu-field {
+    margin: 1px;
+  
+
+  .h4 {
+    margin-bottom: 5px;
+  }
+}
+.login-btn {
+    background-color: transparent;
+    border-color: #A03037;
+    color: #A03037;
+  }
+  .order {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .order img {
+    height: 15px;
+    margin-right: 8px;
+    margin-left: 4px;
+  }
+  .order p {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 12px;
+    margin-top: -2px;
+  }
 
 .footer {
     background-color: black;
