updated the cart code

--- a/src/app/component/cart/cart.component.html
+++ b/src/app/component/cart/cart.component.html
@@ -1,140 +1,165 @@
-<div class="main">
-    <div class="heading">
-        <span class="home" routerLink="/dashboard/books">Home /</span><span> My cart</span>
-    </div>
-    <div class="main-content">
-        <div class="title-header">
-
-            <span class="title">My Cart({{CartList.length}}) </span>
-            <div>
-                <select class="location">
-                    <option> Use Current Location</option>
-                </select>
-            </div>
-
+<div class="Container">
+    <div class="main">
+        <div class="header">
+            <p routerLink="/dashboard/books" type="button">Home /</p>
+            <p>My cart</p>
         </div>
-        <div class="bodyBox">
-            <div *ngFor="let Book of CartList">
-                <div>
-                    <img src="../../../assets/book1.png" alt="" class="image">
-                </div>
-                <div class="details-content">
-                    <div style="margin-left:15px;">
-                        <h2 class="title">{{Book.product_id.bookName}}</h2>
-                        <p id="para"> by {{Book.product_id.author}}</p>
+    </div>
+    <div class="cart_container">
+        <h2>My Cart({{CartList.length}})</h2>
+        <div class="crt" *ngFor="let Book of CartList">
+            <div class="image">
+                <img src="../../../assets/book1.png" alt="">
+            </div>
+            <div class="book-description">
+                <h2>{{Book.product_id.bookName}}</h2>
+                <p>by {{Book.product_id.author}}</p>
+                <div class="price-container" fxLayout="row">
+                    <div class="dicounted-price">
+                        <b>Rs. {{Book.product_id.discountPrice}} </b>
                     </div>
-                    <div>
-                        <b style="margin-left: 18px;">Rs. {{Book.product_id.discountPrice}}</b>
-                        <del id="del"> Rs. {{Book.product_id.price}}</del>
-                    </div>
-                    <div class="quantitiy">
-                        <img class="circle" src="../../../assets/remove_circle_outline_black_24dp.svg">
-                        <div class="inputBox">1</div>
-                        <img class="circle" src="../../../assets/add_circle_outline_black_24dp.svg">
-                        <button class="remove-btn">Remove</button>
-                    </div>
-                    <div style="padding-right:20px;">
-                        <button mat-raised matTooltip="Place Order!" class="button1">PLACE ORDER</button>
+                    <div class="actual-price">
+                        Rs. {{Book.product_id.price}}
                     </div>
                 </div>
+                <div class="quantity">
+                    <div class="decreaseQty" (click)="decrease(Book)">
+                        <img src="../../../assets/remove_circle_outline_black_24dp.svg" alt=" ">
+                    </div>
+                    <div class="one">
+                        {{Book.quantityToBuy}}
+                    </div>
+                    <div class="IncreaseQty" (click)="increase(Book)">
+                        <img src="../../../assets/add_circle_outline_black_24dp.svg" alt=" ">
+                    </div>
+                    <div class="btn">
+                        <button mat-button (click)="deleteItem(Book._id)">
+                            Remove
+                        </button>
+                    </div>
+                </div>
+
             </div>
         </div>
-
+        <div *ngIf="placeorder">
+            <a class="order" (click)="addressBar()">PLACE ORDER</a>
+        </div>
     </div>
-
-    <!-- <div class="address" *ngIf="showAddress">
-        <div>
+    <div class="address" *ngFor="let Book of CartList">
+        <div *ngIf="address">
             <h2>Address Details</h2>
         </div>
 
-    </div>
-    <div class="customer" *ngIf="!showAddress">
-        <div style="margin: 10px;">
-                <span>
-                    <h2 id="title-name">Customer Details</h2>
-                </span>
-        </div>
-    </div> -->
-    <div class="address">
-        <p style="font-size: 15px;" *ngIf="showAddress">AddressDetails</p>
-        <div *ngIf="showAddress" class="customeraddress">
-
-            <div class="customerHeader">
-                <p style="font-size: 20px;">Customer Details</p>
-                <button>Add New Address</button>
-            </div>
-            <div class="details">
-                <div class="fullName">
-                    <mat-label>Full Name</mat-label>
-                    <mat-form-field appearance="outline">
-                        <input matInput placeholder="Full Name">
-                        <!-- <mat-error>Enter Full Name</mat-error> -->
-                    </mat-form-field>
+        <div *ngIf="!address">
+            <div>
+                <div>
+                    <h2>Customer Details</h2>
                 </div>
-
-                <div class="fullName">
-                    <mat-label>Mobile Number</mat-label>
-                    <mat-form-field appearance="outline">
-                        <input matInput type="text" placeholder="Mobile Number">
-                        <!-- <mat-error>Enter Mobile Number</mat-error> -->
-                    </mat-form-field>
-                </div>
-            </div>
-            <div class="workAddress">
-
-                <p>Address</p>
-                <textarea type="text" class="addressInput"></textarea>
-                <div class="city">
-                    <div class="fullName">
-                        <mat-label>city/town</mat-label>
-                        <mat-form-field appearance="outline">
-                            <input matInput placeholder="City/Town">
-                            <!-- <mat-error>Enter City Name</mat-error> -->
-                        </mat-form-field>
+                <div class="cust-container">
+                    <div class="fname">
+                        <div>
+                            <label for="fname" class="label">Full Name</label>
+                        </div>
+                        <div>
+                            <p>{{Book.user_id.fullName}}</p>
+                            <!-- <mat-form-field class="cust-field" appearance="outline">
+                                <input matInput placeholder="Enter Full name" type="text" formControlName="fullName"
+                                    class="form-control">
+                                    
+                            </mat-form-field> -->
+                        </div>
                     </div>
-
-                    <div class="fullName">
-                        <mat-label>state</mat-label>
-                        <mat-form-field appearance="outline">
-                            <input matInput type="text" placeholder="State">
-                            <!-- <mat-error>Enter State Name</mat-error> -->
-                        </mat-form-field>
-                    </div>
-                </div>
-            </div>
-            <h4 style="margin-top: 10px;" class="Typetext">Type</h4>
-            <mat-radio-group >
-                <mat-radio-button class="type_buttons" value="Home">Home</mat-radio-button>
-                <mat-radio-button class="type_buttons" value="Office">Office</mat-radio-button>
-                <mat-radio-button class="type_buttons" value="Other">Other</mat-radio-button>
-            </mat-radio-group>
-        </div>
-        <div *ngIf="displayContinueButton">
-            <button type="submit" class="continue" (click)="showOrderDetails()">CONTINUE</button>
-        </div>
-    </div>
-
-
-    <div class="summary">
-        <!-- <p *ngIf="showSummary">Order Summery</p> -->
-        <div *ngIf="showSummeryDetails" class="showSummrey">
-            <p style="font-size: 20px; margin-bottom: 20px;">Order Summery</p>
-            <div class="book" *ngFor="let Book of CartList">
-                <div class="bookImg"><img src="../../../assets/book1.png" alt="" style="width: 60px;"></div>
-                <div class="bookinfo">
-                    <div style="margin-left:15px;">
-                        <h2 class="title">{{Book.product_id.bookName}}</h2>
-                        <p id="para"> by {{Book.product_id.author}}</p>
-                    </div>
-                    <div>
-                        <b style="margin-left: 18px;">Rs. {{Book.product_id.discountPrice}}</b>
-                        <del id="del"> Rs. {{Book.product_id.price}}</del>
+                    <div class="fname">
+                        <div>
+                            <label for="MoNum" class="label">Mobile Number</label>
+                        </div>
+                        <p>{{Book.user_id.phone}}</p>
+                        <!-- <div>
+                            <mat-form-field class="cust-field" appearance="outline">
+                                <input matInput placeholder="Enter Mobile Number" type="text" formControlName="phone"
+                                    class="form-control">
+                            </mat-form-field> -->
                     </div>
                 </div>
             </div>
             <div>
-                <button class="order1">CHECKOUT</button>
+                <h4>Address</h4>
+                <div class="fad">
+                    <p>{{Book.user_id.address[0].fullAddress}}</p>
+                    <!-- <mat-form-field appearance="outline">
+                            <input matInput placeholder="" formControlName="fullAddress">
+                        </mat-form-field> -->
+                </div>
+            </div>
+            <div class="cust-container">
+                <div class="fname">
+                    <div>
+                        <label for="MoNum" class="label">City/Town</label>
+                    </div>
+                    <div>
+                        <p>{{Book.user_id.address[0].city}}</p>
+                        <!-- <p>{{Book.user_id.fullName}}</p> -->
+                        <!-- <mat-form-field class="cust-field" appearance="outline">
+                                <input matInput placeholder="Enter City/Town" type="text" formControlName="city"
+                                    class="form-control">
+                            </mat-form-field> -->
+                    </div>
+                </div>
+                <div class="fname">
+                    <div>
+                        <label for="MoNum" class="label">State</label>
+                    </div>
+                    <div>
+                        <p>{{Book.user_id.address[0].state}}</p>
+                        <!-- <p>{{Book.user_id.fullName}}</p> -->
+                        <!-- <mat-form-field class="cust-field" appearance="outline">
+                                <input matInput placeholder="Enter State" type="text" formControlName="state"
+                                    class="form-control">
+                            </mat-form-field> -->
+                    </div>
+                </div>
+            </div>
+            <!-- <div>
+                <h4 style="margin-top: 10px;" class="textName">Type</h4>
+                <mat-radio-group formControlName="addressType">
+                  <mat-radio-button class="example-margin" value="Home">Home</mat-radio-button>
+                  <mat-radio-button class="example-margin" value="Office">Office</mat-radio-button>
+                  <mat-radio-button class="example-margin" value="Other">Other</mat-radio-button>
+                </mat-radio-group>
+              </div>
+        </div> -->
+            <div *ngIf="cont">
+                <a class="order" (click)="continueBar()">Continue</a>
+            </div>
+        </div>
+
+
+    </div>
+    <div class="summary">
+        <div *ngIf="summary">
+            <h2>Order Summary</h2>
+        </div>
+        <div *ngIf="!summary">
+            <h2>Order Summary</h2>
+            <div class="crt" *ngFor="let Book of CartList">
+                <div class="image">
+                    <img src="../../../assets/book1.png" alt="">
+                </div>
+                <div class="book-description">
+                    <h2>{{Book.product_id.bookName}}</h2>
+                    <p>by {{Book.product_id.author}}</p>
+                    <div class="price-container" fxLayout="row">
+                        <div class="dicounted-price">
+                            <b>Rs. {{Book.product_id.discountPrice}} </b>
+                        </div>
+                        <div class="actual-price">
+                            Rs. {{Book.product_id.price}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <a class="order" (click)="placeOrder()" >Checkout</a>
             </div>
         </div>
     </div>
-</div>
