--- a/src/app/component/quick-view/quick-view.component.html
+++ b/src/app/component/quick-view/quick-view.component.html
@@ -18,10 +18,20 @@
                 <div class="image">
                     <img src="../../../assets/book1.png" alt="bookImage">
                 </div>
-                <button class="btn">ADD TO BAG</button>
+                <!-- <button class="btn">ADD TO BAG</button>
                 <button class="btn2">
                     <mat-icon id="fav-icons">favorite</mat-icon>WHISH LIST
-                </button>
+                </button> -->
+                <div class="bottom-options">
+                    <div class="buttons">
+                        <button class="cart-button"  mat-raised-button (click)="addToBag()">Add to Bag</button>
+                   
+                        <button class="wishlist-button" mat-raised-button (click)=" wishlist()">
+                            <img class="wish-img" src="../../../assets/favorite_FILL0_wght400_GRAD0_opsz48.svg">Wishlist</button>
+                           
+                    </div>
+            
+                </div>
             </div>
 
             <div class="bookdetails">
