--- a/src/app/component/cart/cart.component.scss
+++ b/src/app/component/cart/cart.component.scss
@@ -1,247 +1,213 @@
-.main {
-    height: 100%;
-    margin: 2% 109px;
- 
-}
-
-.home {
-    color: gray;
-    cursor: pointer;
-    margin-left: 1%;
-}
-
-.main-content {
-    width: 69%;
-     border: 2px solid #E4E4E4;
-    margin-top: 2%;
-    margin-left: 1%;
-   
-}
-
-.title-header {
-    background-color: white;
-    padding: 16px;
-    flex-direction: row;
-    box-sizing: border-box;
-    display: flex;
-   
-}
-.location {
-    margin-left: 300%;
-    padding: 6px;
-}
-
-.image {
-    width: 65px;
-    height: 85px;
-    opacity: 1;
-    position: relative;
-    top: 5px;
-    margin-left: 36px;
-
-
-}
-.details-content{
-    margin-left: 120px;
-margin-top: -90px;
-}
-
-.bookName {
-    height: 24px;
-    width: 150px;
-  
-}
-
-.authorName {
-    height: 16px;
-    width: 76px;
-}
-
-
-.bodyBox {
-    height: 280px;
-}
-
-
-.quantitiy {
-    display: flex;
-   padding-bottom: 40px;
-    margin-top: 6%;
-    margin-left: 2%;
-}
-.inputBox {
-    border: 1px solid #DBDBDB;
-    height: 24px;
-    width: 41px;
-
-}
-
-.circle {
-    height: 24px;
-    width: 24px;
-    margin-right: 2%;
-    cursor: pointer;
-  
-}
-
-.remove-btn {
-    margin-left: 1%;
-    margin-top: 3px;
-    cursor: pointer;
-    background: border-box;
-    border: none;
-    font-weight: bold;
-}
-
-
-.inputBox {
-    border: 1px solid gainsboro;
-    height: 24px;
-    width: 41px;
-    margin-right: 2%;
-    text-align: center;
-    
-
-}
-
-.button1 {
-    width: 120px;
-    height: 35px;
-    background: blue;
-    border: none;
-    color: white;
-    border-radius: 3px;
-    cursor: pointer;
-    margin-top: -5%;
-    margin-left: 510px;
-
-}
-
-// .address {
-//     border-color: black;
-//     border: 2px solid #E4E4E4;
-//     height: auto;
-//     margin-left: 10px;
-//     margin-right: 330px;
-//     margin-top: 20px;
-
-//     h2 {
-//         padding: 0px;
-//         padding-top: 13px;
-//         padding-left: 15px;
-//     }
-// }
-.address{
-    border-color: black;
-        border: 2px solid #E4E4E4;
-        height: auto;
-        margin-left: 10px;
-        margin-right: 330px;
-        margin-top: 20px;
-    padding: 20px 30px;
-   
-}
-.customeraddress{
-    margin-bottom: 40px;
-}
-
-.customerHeader{
-    display: flex;
-    margin-bottom: 20px;
-}
-
-.customerHeader button{
-    margin-left: auto;
-    color: #A03037;
-    background-color: #fff;
-    border: 2px solid #A03037;
-    border-radius: 2px;
-    padding: 0 10px;
-}
-.details{
-    display: flex;
-    gap: 10px;
-    margin-left: 35px;
-}
-
-.fullName{
+.Container {
     display: flex;
     flex-direction: column;
 }
-.workAddress{
-    margin-left: 35px;
+
+.main {
+    padding: 6% 200px;
+    margin-bottom: -60px;
 }
 
-.workAddress-xs{
-    margin-left: 0px;
-}
-
-.optionAddress b{
-    padding-right: 10px;
-}
-
-.addressInput{
-    width: 410px;
-    height: 60px;
-    color: #857f7f;
-    background-color: #f5f3f3;
-    border: 1px solid rgb(219, 202, 202);
-}
-
-
-
-.city{
+.header {
     display: flex;
-    gap: 10px;
+    flex-direction: row;
+    padding: 0px 0px 0px 8px;
+    margin-top: -35px;
 }
-.Typetext{
-    margin-left: 30px;
-}
-.type_buttons{
-    margin-left: 48px;  
-}
-.continue{
-    float: right;
-    background-color: rgb(61, 61, 255);
-    color: #f5f3f3;
-    border: none;
-    border-radius: 2px;
-    font-size: 15px;
-    height: 28px;
-    width: 150px;
-    margin-top: -10px;
-    cursor: pointer;
-}
-.summary{
+
+.cart_container {
     border-color: black;
-    border: 2px solid #E4E4E4;
+    border: groove;
     height: auto;
-    margin-left: 10px;
-    margin-right: 330px;
+    margin-left: 206px;
+    margin-right: 266px;
+
+    h2 {
+        padding: 0px;
+        padding-top: 13px;
+        margin-bottom: -6px;
+        padding-left: 15px;
+    }
+}
+
+.address {
+    border-color: black;
+    border: groove;
+    height: auto;
+    margin-left: 206px;
+    margin-right: 266px;
     margin-top: 20px;
-   padding: 20px 30px;
 
+    h2 {
+        padding: 0px;
+        padding-top: 13px;
+        padding-left: 15px;
+    }
+
+    .cust-container {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .fname {
+        display: flex;
+        flex-direction: column;
+        margin: 0rem;
+        height: 58px;
+        margin-right: -34px;
+        margin-bottom: 2rem;
+        margin-left: 36px;
+        margin-top: -13px;
+        width: 337px;
+    }
+
+    .label {
+        top: 257px;
+        left: 727px;
+        width: 36px;
+        height: 13px;
+        /* UI Properties */
+        text-align: left;
+        font: normal normal normal 10px/13px Roboto;
+        letter-spacing: 0px;
+        color: #0A0102;
+        text-transform: capitalize;
+        opacity: 1;
+    }
+
+    h4 {
+        padding: 0px;
+        padding-top: 13px;
+        padding-left: 37px;
+    }
+
+    .fad {
+        margin: 0rem;
+        height: auto;
+        margin-right: -34px;
+        margin-bottom: 2rem;
+        margin-left: 36px;
+        margin-top: -13px;
+        width: 700px;
+    }
 }
 
-.showSummrey{
-    margin-bottom: 40px;
+
+.summary {
+    border-color: black;
+    border: groove;
+    height: auto;
+    margin-left: 206px;
+    margin-right: 266px;
+    margin-top: 20px;
+
+    h2 {
+        padding: 0px;
+        padding-top: 13px;
+        padding-left: 15px;
+    }
 }
 
-.order1{
-    float: right;
-    background-color: rgb(61, 61, 255);
-    color: #f5f3f3;
-    border: none;
-    border-radius: 2px;
-    font-size: 15px;
-    height: 30px;
-    width: 150px;
+.image {
+    width: 191px;
+    height: 204px;
+    margin-top: -9px;
+}
+
+img {
+    width: 100px;
+    height: 125px;
+    margin-left: 14px;
+    margin-top: 46px;
+}
+
+.book-description {
     cursor: pointer;
+    margin-top: 13px;
 
+    h2 {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        margin-left: -16px;
+    }
+
+    p {
+        margin-bottom: 2px;
+    }
+
+    .price-container {
+        .dicounted-price {
+            margin-top: 10px;
+            font-size: large;
+        }
+
+        .actual-price {
+            margin-top: 10px;
+            margin-left: 5px;
+            text-decoration: line-through;
+            color: gray;
+        }
+    }
 }
 
-.bookinfo{
-    margin-left: 95px;
-    margin-top: -90px;
+.crt {
+    display: flex;
+    flex-direction: row;
+}
+
+.quantity {
+    width: 30%;
+    display: flex;
+    flex-direction: row;
+
+    img {
+        width: 20px;
+    }
+
+    .one {
+        margin-top: 20px;
+    }
+
+    .decreaseQty {
+        margin-right: 17px;
+        margin-top: -76px;
+        margin-left: -14px;
+    }
+
+    .IncreaseQty {
+        margin-left: 5px;
+        margin-top: -76px;
+    }
+
+    .btn {
+        margin-left: 9px;
+        margin-top: 22px;
+
+        button {
+            border: none;
+            background: none;
+        }
+    }
+}
+
+.order {
+    background-color: #185abc;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: list-item;
+    font-size: 16px;
+    margin: 10px 7px;
+    cursor: pointer;
+    border-radius: 6px;
+    margin-left: 608px;
+}
+
+.mat-form-field {
+    padding: 0rem;
+    width: 94%;
 }
 
